Bug 315693 - Information panel shows "&" in filenames as "&"
Summary: Information panel shows "&" in filenames as "&"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 2.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression, testcase
Depends on:
Blocks:
 
Reported: 2013-02-23 15:22 UTC by Sven Wehner
Modified: 2013-04-18 11:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Wehner 2013-02-23 15:22:03 UTC
Dolphin's information seems to forget to un-escape the ampersand and the quotation mark in file names. But on the other hand, seems to handle other special characters (Shift + [1, 3,…, 0 keys]) well.

Reproducible: Always

Steps to Reproduce:
1. Create the files called 'a & b.txt' and 'a: "b".txt'.
2. Select files in dolphin (enable information panel).
3. The files' names are displayed as 'a & b.txt' and 'a: "b".txt'
Comment 1 Frank Reininghaus 2013-02-24 17:44:17 UTC
Thanks for the report. This is a regression caused by https://git.reviewboard.kde.org/r/108584/.
Comment 2 Weng Xuetian 2013-03-16 04:45:30 UTC
Git commit 914b8d88ae287eda2027c8b638e82184e1df4ed5 by Weng Xuetian.
Committed on 16/03/2013 at 05:43.
Pushed by xuetianweng into branch 'KDE/4.10'.

use plain text for information panel

REVIEW: 109129
Related: bug 262464

M  +4    -3    dolphin/src/panels/information/informationpanelcontent.cpp

http://commits.kde.org/kde-baseapps/914b8d88ae287eda2027c8b638e82184e1df4ed5