use plain text for information panel

REVIEW: 109129
BUG: 315693
CCBUG: 262464